# ic7300-mem-manager

./: .gitignore  INSTALLATION.md  README.md  pyproject.toml
.claude/: settings.local.json
src/ic7300_mem_manager/: __init__.py  civ_protocol.py  main.py  memory_manager.py  models.py  ui.py
src/ic7300_mem_manager/templates/: index.html
tests/: __init__.py
